--- a/client/src/app/login-page/register-theatre/register-theatre.component.html
+++ b/client/src/app/login-page/register-theatre/register-theatre.component.html
@@ -1,3 +1,6 @@
+<div style="background-image: url('/assets/background1.jpg');
+background-size: cover;
+background-position: center;">
 <app-login-navbar></app-login-navbar>
 
   <div class="container d-flex justify-content-center align-items-center vh-100">
@@ -156,4 +159,4 @@
       </div>  
     </div>  
     
-  
+  </div>
