--- a/client/src/app/login-page/register/register.component.html
+++ b/client/src/app/login-page/register/register.component.html
@@ -1,7 +1,10 @@
+<div style="background-image: url('/assets/background1.jpg');
+background-size: cover;
+background-position: center;">
 <app-login-navbar></app-login-navbar>
 
 
-  <div class="container d-flex justify-content-center align-items-center vh-100">
+  <div class="container d-flex justify-content-center align-items-center vh-100" >
     <div>
       <div *ngIf="registerError" class="shadow p-2 mb-3 rounded bg-danger bg-gradient">{{ registerError }}</div>
 
@@ -85,4 +88,4 @@
     </div>
       </div>  
     </div>  
-    
+    </div>
