--- a/client/src/app/admin-page/home/home.component.html
+++ b/client/src/app/admin-page/home/home.component.html
@@ -1,26 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
-    <div class="container-fluid">
-      <a class="navbar-brand" href="/admin">Admin page</a>
-      <button
-        class="navbar-toggler"
-        type="button"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarNav"
-        aria-controls="navbarNav"
-        aria-expanded="false"
-        aria-label="Toggle navigation"
-      >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li *ngIf="isLoggedIn$ | async">
-            <a class="nav-link" (click)="logout()">Logout</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+<app-admin-navbar></app-admin-navbar>
   
   <div class="container">
     <div class="row justify-content-center mt-3" *ngIf="registerForms.length === 0">
