--- a/client/src/app/client-page/client-theatres/client-theatres.component.html
+++ b/client/src/app/client-page/client-theatres/client-theatres.component.html
@@ -140,15 +140,16 @@
                     <strong>{{ getTime(item.datetime) }}</strong></strong
                   >
                 </p>
+             
                 <p class="card-text">
-                  <strong>{{ item.theatreName }}</strong>
-                </p>
-                <p class="card-text">
-                  Available Seats: <strong>{{ item.availableTickets }}</strong>
+                  Available tickets: <strong>{{ item.availableTickets }}</strong>
                 </p>
 
                 <p class="card-text">
                   Price: <strong>{{ item.price }}</strong> $
+                </p>
+                <p class="card-text">
+                  Organizer: <strong>{{ item.theatreName }}</strong>
                 </p>
               </div>
             </div>
