update organizer page so he can't delete event if it it scheduled in future

--- a/client/src/app/theatre-page/plays/plays.component.html
+++ b/client/src/app/theatre-page/plays/plays.component.html
@@ -38,7 +38,7 @@
             <a mat-icon-button (click)="openEditForm(item)">
               <mat-icon style="transform:scale(1.5)" color="primary">create</mat-icon>
             </a>
-            <a mat-icon-button (click)="deletePlay(item.id)">
+            <a mat-icon-button (click)="openConfirmation(item.id)">
               <mat-icon style="transform:scale(1.5)" color="warn">delete</mat-icon>
             </a>
           <button
