sending email on creating account and on reservation deleted by organizer

--- a/client/src/app/theatre-page/reservations/reservations.component.html
+++ b/client/src/app/theatre-page/reservations/reservations.component.html
@@ -38,7 +38,7 @@
           <ng-container matColumnDef="action">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Action </th>
             <td mat-cell *matCellDef="let row"> 
-              <button class="mat-icon-button" *ngIf="isEventDateFuture(row.eventDateTime)" (click)="openConfirmation(row.id)">
+              <button class="mat-icon-button" *ngIf="isEventDateFuture(row.eventDateTime)" (click)="openConfirmation(row)">
                 <mat-icon>
                   delete
                 </mat-icon>
