--- a/client/src/app/login-page/login-navbar/login-navbar.component.html
+++ b/client/src/app/login-page/login-navbar/login-navbar.component.html
@@ -9,7 +9,7 @@
         <a class="nav-link" href="home/events">Events</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="home/theatres">Theatres</a>
+        <a class="nav-link" href="home/theatres">Organizers</a>
       </li>
      </ul>
   
