--- a/client/src/app/login-page/register/register.component.scss
+++ b/client/src/app/login-page/register/register.component.scss
@@ -1,12 +1,3 @@
-.full-height{
-    height: 100vh
-}
-
-.float-right{
-    float:right
-}
-
-.main-container{
-    min-width: 700px;
-    min-height: 500px;
+input{
+    min-width: 20em;
 }
