--- a/client/src/app/login-page/register-theatre/register-theatre.component.html
+++ b/client/src/app/login-page/register-theatre/register-theatre.component.html
@@ -49,6 +49,7 @@ background-position: center;">
               maxlength="40"
               [(ngModel)]="model.email"
               placeholder="Email"
+              pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}"
               required
               #email="ngModel"
             />
@@ -125,6 +126,7 @@ background-position: center;">
             name="image"
             id="image"
             class="form-control"
+            required
             (change)="onFileSelected($event)"
           />
           
